--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.4'
 }
 
-group = 'net.proselyte'
+group = 'edu.mikita'
 version = '1.0.0'
 
 java {
